--- a/WebAdvert.SearchApi/appsettings.json
+++ b/WebAdvert.SearchApi/appsettings.json
@@ -9,7 +9,7 @@
   },
   "AllowedHosts": "*",
   "AWS.Logging": {
-    "Region": "ap-southeast-2",
+    "Region": "eu-west-3",
     "LogGroup": "searchapi",
     "LogLevel": {
       "Default": "Information"
