--- a/WebAdvert.SearchApi/WebAdvert.SearchApi.csproj
+++ b/WebAdvert.SearchApi/WebAdvert.SearchApi.csproj
@@ -3,10 +3,12 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="AWS.Logger.AspNetCore" Version="3.0.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.14" />
     <PackageReference Include="NEST" Version="7.11.1" />
   </ItemGroup>
 
